# SpaceApp24-CyberClan

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
Bhoomi/: __init__.py  main.py
Bhoomi/Bhoomi/: asgi.py  settings.py  urls.py  wsgi.py
Bhoomi/static/css/: about.css  contact.css  landing.css  styles.css
Bhoomi/static/js/: script.js
Bhoomi/templates/: about.html  contact.html  index.html  landing.css  landingpage.html  map.html  styles.css  test.css  test.html
