[tool.poetry]
name = "spaceapp24-cyberclan"
version = "0.1.0"
description = ""
authors = ["winter_x64 <itswinterx64@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
flask = "^3.0.3"
folium = "^0.17.0"
geopandas = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
